change some colors

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 .afternoon {
-    background: radial-gradient(#e4e812 20%, #bec11b);
+    background: radial-gradient(#009b7f 20%, #007c66);
 }
 
 .evening {
